WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203461
REGRESSION(2.27.2): [GTK] Overview item remove button broken
https://bugs.webkit.org/show_bug.cgi?id=203461
Summary
REGRESSION(2.27.2): [GTK] Overview item remove button broken
Michael Catanzaro
Reported
2019-10-26 10:14:35 PDT
Since upgrading Tech Preview from 2.26.1 -> 2.27.2, the remove button for about:overview overview items is broken. We see a broken image placeholder instead of the proper remove icon. Normally I'd check the web inspector for hints, but the web inspector is itself still broken (
bug #202321
, pending new shared-mime-info release), so no hints.
Attachments
Patch
(2.10 KB, patch)
2019-10-29 04:09 PDT
,
Carlos Garcia Campos
aperez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2019-10-29 04:07:11 PDT
This is a regression of the switch to new custom protocols implementation. Epiphany is passing NULL as content type of ephy-resource requests, in which case we should try to guess the mime type, but we are not doing it.
Carlos Garcia Campos
Comment 2
2019-10-29 04:09:02 PDT
Created
attachment 382175
[details]
Patch
EWS Watchlist
Comment 3
2019-10-29 04:09:38 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 4
2019-10-30 00:57:10 PDT
Committed
r251769
: <
https://trac.webkit.org/changeset/251769
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug